# JsonFlatter

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: hadolint.yml  rust-clippy.yml
src/: flatten_context.rs  flattener.rs  main.rs
