[package]
name = "elastic"
version = "0.1.0"
edition = "2021"
authors = ["Barak Taya, barakadax@gmail.com"]

[dependencies]
serde_json = { version = "1.0.133", default-features = false, features = [
        "std", 
        "alloc", 
        "arbitrary_precision", 
        "float_roundtrip", 
        "preserve_order", 
        "indexmap", 
        "raw_value", 
        "unbounded_depth"] }
serde = { version = "1.0.216", default-features = false, features = ["derive", "alloc"] }
tokio = { version = "1.42.0", default-features = false, features = ["macros", "rt-multi-thread"] }
elasticsearch = { version = "8.16.0-alpha.1", default-features = false, features = ["native-tls", "experimental-apis"] }
