[package]
name = "elastic"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "AGPL-3.0"
authors = ["Barak Taya, barakadax@gmail.com"]

[package.metadata]
homepage = "https://barakadax.github.io/"
repository = "https://github.com/barakadax/JsonFlatter"

[dependencies]
dotenvy = { version = "0.15.7", features = ["clap"] }
serde_json = { version = "1.0.133", default-features = false, features = [
        "std", 
        "alloc", 
        "arbitrary_precision", 
        "float_roundtrip", 
        "preserve_order", 
        "indexmap", 
        "raw_value", 
        "unbounded_depth"] }
serde = { version = "1.0.216", default-features = false, features = ["derive", "alloc"] }
tokio = { version = "1.42.0", default-features = false, features = ["macros", "rt-multi-thread"] }
elasticsearch = { version = "8.16.0-alpha.1", default-features = false, features = ["native-tls", "experimental-apis"] }
